--- a/project.json
+++ b/project.json
@@ -3,6 +3,7 @@
   "description": "Blank Process",
   "main": "Workflow\\Main.xaml",
   "dependencies": {
+    "GitForWindows": "[2.25.0]",
     "UiPath.Excel.Activities": "[2.7.2]",
     "UiPath.Mail.Activities": "[1.7.2]",
     "UiPath.System.Activities": "[19.10.1]",
